# eigen

./: mypy.ini  pyproject.toml  ruff.toml
eigen/: __init__.py  broadcast.py  cpu_runtime.py  device.py  dtypes.py  edge.py  graph.py  lazy.py  metal_runtime.py  node.py  ops.py  scheduler.py  tensor.py
eigen/grumpy/: index.html  serve.py  server.py
eigen/grumpy/js/: index.js  profile.js
eigen/nn/: layer.py
test/: basic.py
tests/: test_basic.py
