[project]
name = "eigen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ashtyn3", email = "ashtynmorel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pyobjc>=11.0",
    "pyobjc-framework-metal>=11.0",
    "tabulate>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["eigen/"]

# [tool.hatch.build.targets.wheel]
# include = [
#   "aigan",
# ]

[tool.hatch.build.targets.wheel.data]
"aigan/py.typed" = "eigen/py.typed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"


